--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 # CONFIGURACIÓN DEL SERVIDOR
 PORT=3000
-CLIENT_URL=https://streetfighterbet.ngrok.dev
+CLIENT_URL=https://streetfighterbet.ngrok.app
 
 # ============================================
 # BSC NETWORK
